# IML_FS26

./: README.md  pyproject.toml
week1/: L01_Data_Cleaning.ipynb  L01_Data_Cleaning_SOLUTION.ipynb  README.md  dobesmic_week1_task2.md
week10/: L10_GenerativeModels_Assignment.ipynb  README.md
week11/: README.md
week2/: L02_Linear_Regression.ipynb  README.md
week3/: L03_Gradient_Descent.ipynb  README.md
week4/: L04_Logistic_Regression.ipynb  README.md
week5/: L05_Supervised_Learning.ipynb  README.md
week6/: L06_Neural_Networks.ipynb  README.md
week7/: L07_Training_NNs.ipynb  README.md
week8/: L08_SVMs.ipynb  README.md
week9/: L09_Decision_Trees.ipynb  README.md
