[project]
name = "iml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.8.4",
    "jupyterlab>=4.5.4",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn[all]>=0.13.2",
]

[dependency-groups]
dev = [
    "black[jupyter]>=26.3.1",
]
